--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.17.6",
     "framer-motion": "^11.3.29",
     "next": "14.2.5",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
