--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.5",
     "@react-three/drei": "^9.111.5",
     "@react-three/fiber": "^8.17.6",
+    "axios": "^1.7.7",
     "framer-motion": "^11.3.29",
     "next": "14.2.5",
     "next-auth": "^4.24.8",
